v156
(xx/09/17)

Changes / Improvements / Optimizations:
DietPi-Drive_Manager | We have reviewed "Mystic Meg's" claims that it is possible to psychically unmount drives. Our team has personally tested this claim, and, we can confirm this is simply not the case. Either that, or our "Chinatown" crystal ball is not fully functional. Therefore, we have deemed it necessary that users must "physically" remove drives, instead of attempting to achieve it with their minds alone. This also applies to keyboards.

Bug fixes:

-----------------------------------------------------------------------------------------------------------

v155
(02/09/17)

New Image:
Rock64 | Now available for beta testing: https://github.com/Fourdee/DietPi/issues/1102#issuecomment-325131437

Changes / Improvements / Optimizations:
General | RPi: Kernel updated to 4.9.40. Includes improved driver support for Allo Piano and DiGi One: https://github.com/raspberrypi/linux/pull/2149
General | dietpi.txt: Added an dev option to force a resize + expansion on rootfs partition for next boot (fs_force_resize=1)
General | RT kernel for RPi is now available, can be installed with "/DietPi/dietpi/func/dietpi-set_hardware kernel dietpi_rpi_rt"
General | Reworked the disabled modules for Sparky. Disables touchscreen and GPU modules (thanks @sudeep).
General | Sparky Image updated to Stretch, includes kernel update for DSD256/512 support.
DietPi-Config | Networking > WiFi: Added a feature which will monitor the Wifi connection and automatically reconnect, if the gateway is unavailable (eg: connection drop): https://github.com/Fourdee/DietPi/issues/1074
DietPi-Software | Home Assistant: Now available for installation. Many thanks to @sytone for adding this: https://github.com/Fourdee/DietPi/pull/1087
DietPi-Software | Sabnzbd: Updated to 2.1.0 for new installations only: https://github.com/Fourdee/DietPi/issues/865#issuecomment-319110395