@@ -52,7 +52,7 @@ rm /etc/apt/sources.list.d/deb-multimedia.list
 #Remove following All
 apt-get clean
 apt-get update
-apt-get purge -y jq xxd iperf3 gdisk gpsd ppp libboost-iostreams* sgml-base xml-core usb-modeswitch* libpng* cpp-* cpp ntpdate bluez bluetooth rsync dialog dhcpcd5 libsqlite* lua5.1 netcat-* make makedev ncdu plymouth openresolv shared-mime-in* tcpd strace tasksel* wireless-* xdg-user-dirs triggerhappy python* v4l-utils traceroute xz-utils ucf xauth zlib1g-dev xml-core aptitude* avahi-daemon rsyslog logrotate man-db manpages vim vim-common vim-runtime vim-tiny mc mc-data
+apt-get purge -y fonts-* xmms2-client-* pulseaudio* jq xxd iperf3 gdisk gpsd ppp libboost-iostreams* sgml-base xml-core usb-modeswitch* libpng* cpp-* cpp ntpdate bluez bluetooth rsync dialog dhcpcd5 libsqlite* lua5.1 netcat-* make makedev ncdu plymouth openresolv shared-mime-in* tcpd strace tasksel* wireless-* xdg-user-dirs triggerhappy python* v4l-utils traceroute xz-utils ucf xauth zlib1g-dev xml-core aptitude* avahi-daemon rsyslog logrotate man-db manpages vim vim-common vim-runtime vim-tiny mc mc-data
 
 #+Desktop images (Mostly desktop packages, but apply to non-desktop images also):
 apt-get purge -y libpod-* libpeas-* isc-dhcp-server gnome-* fonts-dejavu* eject dnsmasq* dns-root-data colord-data libjasper* libjson* libwbclient* libwayland* golang-* libavahi* libtext* libweb* libpcsclite1 libxau6* libxc* dictionaries-* libgtk* miscfiles minicom lrzsz lxmenu-* x11-* zenity* yelp-*
@@ -93,7 +93,7 @@ apt-get install firmware-linux-nonfree -y
 #??? bluetooth if onboard device / RPI
 apt-get install -y bluetooth bluez-firmware
 
-#??? RPi - bluetooth/firmware for RPi 3 (ALL)
+#??? RPi - bluetooth/firmware for all RPi's
 apt-get install -y pi-bluetooth
 #??? RPi - common rpi specific binaries (eg: raspistill)
 apt-get install -y libraspberrypi-bin
@@ -111,6 +111,7 @@ userdel -f pi
 userdel -f test #armbian
 userdel -f odroid
 userdel -f rock64
+userdel -f linaro #ASUS TB
 
 #Remove folders (now in finalise script)
 
@@ -474,6 +475,7 @@ cat << _EOF_ > /etc/modprobe.d/disable_sparkysbc_touchscreen.conf
 blacklist owl_camera
 blacklist gsensor_stk8313
 blacklist ctp_ft5x06
+blacklist ctp_gsl3680
 blacklist gsensor_bma222
 blacklist gsensor_mir3da
 _EOF_
