@@ -3665,51 +3665,26 @@ _EOF_
 
 			Banner_Installing
 
-			INSTALL_URL_ADDRESS='http://dietpi.com/downloads/binaries/all/mpd_0.19.21_'
-
-			# - armv6
-			if (( $HW_ARCH == 1 )); then
-
-				INSTALL_URL_ADDRESS+='armv6.deb'
-
-			# - armv7+
-			elif (( $HW_ARCH == 2 )); then
-
-				INSTALL_URL_ADDRESS+='armv7.deb'
-
-			# - arm64
-			elif (( $HW_ARCH == 3 )); then
-
-				INSTALL_URL_ADDRESS+='arm64.deb'
-
-			fi
+			INSTALL_URL_ADDRESS='http://dietpi.com/downloads/binaries/all/mpd_0.19.21_arm64.deb'
 			/DietPi/dietpi/func/check_connection "$INSTALL_URL_ADDRESS"
-
-			#	Install
 			if (( $? == 0 )); then
 
 				#libupnp6 for net discov with upnp/avahi
 				AGI libupnp6
 
-				# - ARM64 not available in Jessie repos
+				# - MPD ARM64 not available in Jessie repos
 				if (( $DISTRO == 3 &&
 					$HW_ARCH == 3 )); then
 
 					AGI libmpdclient2 libao-common libao4 libasound2 libasound2-data libasyncns0 libaudiofile1 libavahi-client3 libavahi-common-data libavahi-common3 libavcodec56 libavformat56 libavresample2 libavutil54 libbinio1ldbl libcaca0 libcdio-cdda1 libcdio-paranoia1 libcdio13 libcups2 libcurl3-gnutls libdirectfb-1.2-9 libdnet libfaad2 libflac8 libfluidsynth1 libgme0 libgomp1 libgsm1 libice6 libid3tag0 libiso9660-8 libjack-jackd2-0 libjson-c2 libldb1 libmad0 libmikmod3 libmms0 libmodplug1 libmp3lame0 libmpcdec6 libmpg123-0 libnfs4 libntdb1 libogg0 libopenal-data libopenal1 libopenjpeg5 libopus0 liborc-0.4-0 libpulse0 libresid-builder0c2a libroar2 libsamplerate0 libschroedinger-1.0-0 libsdl1.2debian libshout3 libsidplay2 libsidutils0 libslp1 libsm6 libsmbclient libsndfile1 libsoxr0 libspeex1 libspeexdsp1 libsqlite3-0 libtalloc2 libtdb1 libtevent0 libtheora0 libupnp6 libva1 libvorbis0a libvorbisenc2 libvorbisfile3 libvpx1 libwavpack1 libwbclient0 libwildmidi-config libwildmidi1 libx11-6 libx11-data libx11-xcb1 libx264-142 libxau6 libxcb1 libxdmcp6 libxext6 libxi6 libxtst6 libxvidcore4 libyajl2 libzzip-0-13 mime-support python python-talloc python2.7 samba-libs x11-common file --no-install-recommends
 
-				else
-
-					AGI mpd
-
-				fi
-
-				#Overwrite with our newer compiled .deb's
-				#	Stretch is same version as ours at this time (0.19.19)
-				if (( $DISTRO == 3 )); then
-
 					wget "$INSTALL_URL_ADDRESS" -O package.deb
 					dpkg -i package.deb
 					rm package.deb
+
+				else
+
+					AGI mpd
 
 				fi
 
