@@ -346,7 +346,7 @@ _EOF_
 	sync
 
 	#Sync DietPi RAMdisk to Disk now
-	systemctl restart dietpi-ramdisk
+	#systemctl restart dietpi-ramdisk # causes reboot on sparky????/ due to rm *. on dietpi globals?
 
 	echo -e "Check and delete all non-required folders in /root/.xxxxxx"
 	ls -lha /lib/modules
