@@ -2717,6 +2717,7 @@ _EOF_
 blacklist owl_camera
 blacklist gsensor_stk8313
 blacklist ctp_ft5x06
+blacklist ctp_gsl3680
 blacklist gsensor_bma222
 blacklist gsensor_mir3da
 _EOF_
