@@ -2,9 +2,11 @@ v156
 (xx/09/17)
 
 Changes / Improvements / Optimizations:
-DietPi-Drive_Manager | We have reviewed "Mystic Meg's" claims that it is possible to psychically unmount drives. Our team has personally tested this claim, and, we can confirm this is simply not the case. Either that, or our "Chinatown" crystal ball is not fully functional. Therefore, we have deemed it necessary that users must "physically" remove drives, instead of attempting to achieve it with their minds alone. This also applies to keyboards.
+General | ASUS TB: Updated image. Includes latest kernel and matches current 2.0.1 TinkerOS image.
+DietPi-Drive_Manager | We have reviewed "Mystic Meg's" claims that it is possible to psychically unmount drives. Our team has personally tested this claim, and, we can confirm this is simply not the case. Either that, or our "Chinatown" crystal ball is not fully functional. Therefore, we have deemed it necessary that users must "physically" remove drives, instead of attempting to achieve it with their minds alone. This also applies to keyboards. Thanks John!
 
 Bug fixes:
+DietPi-Software | MPD: Resolved an issue where MPD dependencies are not flagged as installed, causing removal during "apt-get autoremove": https://github.com/Fourdee/DietPi/issues/1140
 
 -----------------------------------------------------------------------------------------------------------
 
